<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.EditTextFieldServerTest"
    tools:showIn="@layout/activity_main">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_above="@+id/room"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/wap1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingLeft="10dp"
            android:maxLength="15"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:background="@drawable/layout_bg"
            android:hint="@string/wap1"
            android:inputType="numberSigned"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/wap2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingLeft="10dp"
            android:maxLength="15"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:background="@drawable/layout_bg"
            android:hint="@string/wap2"
            android:inputType="numberSigned"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/wap3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingLeft="10dp"
            android:maxLength="15"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:background="@drawable/layout_bg"
            android:hint="@string/wap3"
            android:inputType="numberSigned"

            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/wap4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingLeft="10dp"
            android:maxLength="15"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:background="@drawable/layout_bg"
            android:hint="@string/wap4"
            android:inputType="numberSigned"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/wap5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingLeft="10dp"
            android:maxLength="15"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:background="@drawable/layout_bg"
            android:hint="@string/wap5"
            android:inputType="numberSigned"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/wap6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingLeft="10dp"
            android:maxLength="15"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:background="@drawable/layout_bg"
            android:hint="@string/wap6"
            android:inputType="numberSigned"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/wap7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:paddingLeft="10dp"
            android:maxLength="15"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:background="@drawable/layout_bg"
            android:hint="@string/wap7"
            android:inputType="numberSigned"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/room"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingLeft="10dp"
        android:maxLength="15"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"

        android:textColor="@color/black"
        android:background="@drawable/layout_bg"
        android:text="@string/predict"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
      android:layout_alignParentBottom="true"
        />

</RelativeLayout>